@@ -15,20 +15,298 @@ import sootup.java.bytecode.frontend.inputlocation.JavaClassPathAnalysisInputLoc
 import sootup.java.core.views.JavaView;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-import static de.upb.sse.cutNRun.analyzer.intraprocedural.ArgumentSource.RETURN_FROM_METHOD;
+import static de.upb.sse.cutNRun.analyzer.intraprocedural.ArgumentSource.*;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class TraditionalReflectionNewInstanceTest {
+
     @Test
     public void shouldAnalyzeFile1() {
         View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File1"));
-        /*ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile1");
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile1");
         SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
                                                    .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(13);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(LOCAL, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile1_ForClass() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File1"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile1");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(2);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile2_MethodSource() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File2-methodSourceFromSameClass"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile2");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(2);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile2_MethodSource_getConstructor() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File2-methodSourceFromSameClass"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile2");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(12);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile3_MethodSource() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File3-methodSourceFromDifferentClass"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile3");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(5);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile3_MethodSource_getConstructor() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File3-methodSourceFromDifferentClass"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile3");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(15);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile4_MethodSource() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File4-methodSourceFromInterface"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile4");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(5);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile4_MethodSource_getConstructor() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File4-methodSourceFromInterface"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile4");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(15);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile5_fieldSource() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File5-fieldSource"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile5");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(5);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(FIELD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile5_fieldSource_getConstructor() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File5-fieldSource"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile5");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.String")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(13);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(FIELD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile6_parameterSource() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File6-parameterSource"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile6");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.Class")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(1);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(METHOD_PARAMETER, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile6_parameterSource_getConstructor() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File6-parameterSource"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile6");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", List.of("java.lang.Class")))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(10);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(METHOD_PARAMETER, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile7_multipleSource_ifBranch() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File7-IfBranch"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFileIfBranch1");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", Collections.emptyList()))
                                     .get();
         Stmt startStmt = sootMethod.getBody().getStmts().get(9);
         StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
@@ -38,12 +316,61 @@ public class TraditionalReflectionNewInstanceTest {
 
         Result result = argumentSourceAnalysis.getResult();
         StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
-        assertEquals(argumentSourceAnalysis.getFlowBefore(stmtGraph.getStartingStmt()).size(), 2);
         List<ArgumentSource> sources = argumentSourceAnalysis.getFlowBefore(stmtGraph.getStartingStmt()).stream()
                                                              .map(result1 -> result1.getArgumentSource())
                                                              .collect(Collectors.toUnmodifiableList());
-        assertTrue(CollectionUtils.isEqualCollection(sources, Arrays.asList(RETURN_FROM_METHOD, RETURN_FROM_METHOD)));
-        assertTrue(stringConcatResult.isEmpty());*/
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(true, argumentSourceAnalysis.isBranching());
+        assertTrue(CollectionUtils.isEqualCollection(List.of(LOCAL, RETURN_FROM_METHOD), sources));
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile8_WhileLoopTest() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File8-WhileLoop"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFileForLoop1");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", Collections.emptyList()))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(9);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        List<ArgumentSource> sources = argumentSourceAnalysis.getFlowBefore(stmtGraph.getStartingStmt()).stream()
+                                                             .map(result1 -> result1.getArgumentSource())
+                                                             .collect(Collectors.toUnmodifiableList());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(true, argumentSourceAnalysis.isBranching());
+        assertTrue(CollectionUtils.isEqualCollection(List.of(LOCAL, RETURN_FROM_METHOD), sources));
+
+        ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
+        programAnalyzerPort.analyze();
+    }
+
+    @Test
+    public void shouldAnalyzeFile9_OverwriteSourcesTest() {
+        View view = new JavaView(new JavaClassPathAnalysisInputLocation("src/test/resources/intraprocedural/NewInstance/File9-OverwriteSource"));
+        ClassType classType = view.getIdentifierFactory().getClassType("NewInstanceFile7OverwriteVariable");
+        SootMethod sootMethod = view.getMethod(view.getIdentifierFactory()
+                                                   .getMethodSignature(classType, "caller", "void", Collections.emptyList()))
+                                    .get();
+        Stmt startStmt = sootMethod.getBody().getStmts().get(5);
+        StmtGraph<?> stmtGraph = sootMethod.getBody().getStmtGraph();
+
+        ArgumentSourceAnalysis argumentSourceAnalysis = new ArgumentSourceAnalysis(stmtGraph, startStmt, view);
+        argumentSourceAnalysis.execute();
+
+        Result result = argumentSourceAnalysis.getResult();
+        StringConcatenationSource stringConcatResult = argumentSourceAnalysis.getStringConcatenationSource();
+        assertEquals(RETURN_FROM_METHOD, result.getArgumentSource());
+        assertEquals(true, stringConcatResult.isEmpty());
+        assertEquals(false, argumentSourceAnalysis.isBranching());
 
         ProgramAnalyzerAdaptor programAnalyzerPort = new ProgramAnalyzerAdaptor(view, "");
         programAnalyzerPort.analyze();
